--- a/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
+++ b/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
@@ -15,30 +15,28 @@
                 <td>
                     <div class="control-block-group">
                         <label for="buildingObjectsSelect">Проект</label>
-
                         <div id="buildingObjectsSelect"
                              data-dojo-attach-point="buildingObjectsSelect"
                              data-dojo-props="url: '/compulink/reporting/resources/child'"
                              data-dojo-type="ngw-compulink-reporting/BuildingObjectsSelect"></div>
                     </div>
-                </td>
-                <td>
                     <div class="control-block-group">
-                        <label for="onlyOverdue">Только просроченные</label>
+                        <label for="showApproved">Выводить утвержденные</label>
 
                         <div data-dojo-type="dijit/form/CheckBox"
-                             data-dojo-attach-point="onlyOverdue"
+                             data-dojo-attach-point="showApproved"
                              data-dojo-props="value: true"
-                             id="onlyOverdue"></div>
+                             id="showApproved"></div>
                     </div>
+                </td>
+                <td>
                     <button data-dojo-type="dijit/form/Button"
                             data-dojo-attach-point="buildReport"
                             type="button">Построить
                     </button>
-
                     <!--<button data-dojo-type="dijit/form/Button"-->
-                            <!--data-dojo-attach-point="exportExcel"-->
-                            <!--type="button">Выгрузить в Excel-->
+                    <!--data-dojo-attach-point="exportExcel"-->
+                    <!--type="button">Выгрузить в Excel-->
                     <!--</button>-->
                 </td>
             </tr>
