#434 menu item was added

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -30,6 +30,9 @@
                     <li>
                         <a title="Статистика" href="{{ headerData.statisticMapUrl }}">Статистика</a>
                     </li>
+                    <li>
+                        <a title="Отклонения от проекта строительства" href="{{ headerData.reportDeviation }}">Отклонения от проекта строительства</a>
+                    </li>
                 </ul>
             </li>
             <li>
