#449 selection and bulk applying controls was added to DeviationGrid

--- a/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
+++ b/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
@@ -30,10 +30,20 @@
                     </div>
                 </td>
                 <td>
-                    <!--<button data-dojo-type="dijit/form/Button"-->
-                    <!--data-dojo-attach-point="exportExcel"-->
-                    <!--type="button">Выгрузить в Excel-->
-                    <!--</button>-->
+                    <div class="control-block-group">
+                        <button data-dojo-type="dijit/form/Button"
+                                data-dojo-attach-point="applyDeviationBtn"
+                                disabled="disabled"
+                                type="button">Утвердить отклонения
+                        </button>
+                    </div>
+                    <div class="control-block-group">
+                        <button data-dojo-type="dijit/form/Button"
+                                data-dojo-attach-point="clearSelectionBtn"
+                                disabled="disabled"
+                                type="button">Снять выделение
+                        </button>
+                    </div>
                 </td>
             </tr>
         </table>
