--- a/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/resources/DeviationGrid.css
+++ b/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/resources/DeviationGrid.css
@@ -74,3 +74,7 @@ div.control-inline-group label {
     display: inline-block;
     min-width: 150px;
 }
+
+.claro .dgrid-row.dgrid-selected {
+    background-color: #99D0FF;
+}
