--- a/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
+++ b/nextgisweb_compulink/compulink_deviation/amd/ngw-compulink-deviation/templates/DeviationGrid.html
@@ -34,14 +34,7 @@
                         <button data-dojo-type="dijit/form/Button"
                                 data-dojo-attach-point="applyDeviationBtn"
                                 disabled="disabled"
-                                type="button">Утвердить отклонения
-                        </button>
-                    </div>
-                    <div class="control-block-group">
-                        <button data-dojo-type="dijit/form/Button"
-                                data-dojo-attach-point="clearSelectionBtn"
-                                disabled="disabled"
-                                type="button">Снять выделение
+                                type="button">Утвердить отклонение для отмеченных объектов
                         </button>
                     </div>
                 </td>
