--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FieldsDisplayWidget.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FieldsDisplayWidget.css
@@ -7,6 +7,11 @@
 
 .ngw-feature-layer-FieldsDisplayWidget span.null { color: #999; }
 
+.ngw-feature-layer-FieldsDisplayWidget span.deviation {
+    color: #a20200;
+    font-weight: bold;
+}
+
 .ngw-feature-layer-FieldsDisplayWidget.compact table.pure-table th.display_name { width: auto; }
 
 
