--- a/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
+++ b/nextgisweb_compulink/compulink_admin/amd/ngw-compulink-admin/template/FoclStructWidget.html
@@ -1,41 +1,2 @@
-<div data-dojo-type="${baseClass}" data-dojo-attach-point="focusNode"
-        data-ngw-serialize-prefix="${serializePrefix}">
-    <div data-dojo-type="dijit/layout/ContentPane" style="overflow:auto">
-        <div data-dojo-type="dojox/layout/TableContainer" data-dojo-props="cols:1" >
-
-            <div data-dojo-type="dijit/form/FilteringSelect"
-                 data-dojo-attach-point="regions_cmb"
-                 data-dojo-props="required: false, searchAttr:'name', idProperty: 'id'"
-                 data-ngw-serialize="region"
-                 title="Субъект РФ" style="width: 100%">
-            </div>
-
-            <div data-dojo-type="dijit/form/FilteringSelect"
-                 data-dojo-attach-point="district_cmb"
-                 data-dojo-props="required: false, searchAttr:'name', idProperty: 'id'"
-                 data-ngw-serialize="district"
-                 title="Муниципальный район" style="width: 100%">
-            </div>
-
-            <div data-dojo-type="dijit/form/ValidationTextBox"
-                 data-dojo-props="required: false"
-                 data-ngw-serialize="external_id"
-                 title="Внешний идентификатор" style="width: 100%">
-            </div>
-
-            <div data-dojo-type="dijit/form/FilteringSelect"
-                 data-dojo-attach-point="status_cmb"
-                 data-dojo-props="required: false, searchAttr:'name', idProperty: 'id'"
-                 data-ngw-serialize="status"
-                 title="Статус" style="width: 100%">
-            </div>
-
-            <div data-dojo-type="dijit/form/ValidationTextBox"
-                 data-dojo-props="required: false"
-                 data-ngw-serialize="status_upd_dt"
-                 title="Дата изменения статуса" style="width: 100%">
-            </div>
-
-        </div>
-    </div>
+<div data-dojo-type="${baseClass}" data-dojo-attach-point="focusNode">
 </div>
