--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FieldsDisplayWidget.css
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/tool/resource/FieldsDisplayWidget.css
@@ -7,7 +7,8 @@
 
 .ngw-feature-layer-FieldsDisplayWidget span.null { color: #999; }
 
-.ngw-feature-layer-FieldsDisplayWidget span.deviation {
+.ngw-feature-layer-FieldsDisplayWidget span.deviation,
+div.ngw-feature-layer-FieldsDisplayWidget a.apply-deviation {
     color: #a20200;
     font-weight: bold;
 }
@@ -18,5 +19,10 @@
 .ngw-feature-layer-FieldsDisplayWidget.compact table.pure-table td, 
 .ngw-feature-layer-FieldsDisplayWidget.compact table.pure-table th {
     padding: 1px 2px;
+}
+
+div.ngw-feature-layer-FieldsDisplayWidget a.apply-deviation {
+    padding: 5px;
+    text-decoration: underline;
 }
 
