fixed #478 menu item was renamed

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/DisplayHeader.html
@@ -28,7 +28,7 @@
                         <a title="Отчет по проекту УЦН" href="{{ headerData.reportUcnUrl }}">Отчет по проекту УЦН</a>
                     </li>
                     <li>
-                        <a title="Статистика" href="{{ headerData.statisticMapUrl }}">Статистика</a>
+                        <a title="Панель мониторинга" href="{{ headerData.statisticMapUrl }}">Панель мониторинга</a>
                     </li>
                     <li>
                         <a title="Отклонения от проекта строительства" href="{{ headerData.reportDeviation }}">Отклонения от проекта строительства</a>
