--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -26,6 +26,12 @@ div.timeline i.fa:hover {
     color: #0166FF;
 }
 
+div.timeline i.fa.disabled,
+div.timeline i.fa.disabled:hover {
+    color: #D4D4D4;
+    cursor: auto;
+}
+
 div.timeline div.vis-foreground div.vis-group {
     height: 100% !important;
 }
@@ -39,11 +45,11 @@ div.timeline div.vis-custom-time.currentTime {
     background-color: red;
 }
 
-i.fa-fast-backward {
+div.timeline i.fa-fast-backward {
     margin-right: 5px;
 }
 
-i.fa-fast-forward {
+div.timeline i.fa-fast-forward {
     margin-left: 5px;
 }
 
@@ -51,6 +57,6 @@ div#timeline div.vis-current-time {
     background-color: green;
 }
 
-i.sound {
+div.timeline i.sound {
     margin-left: 15px;
 }
