--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -161,15 +161,6 @@
                         </div>
 
                     </div>
-
-                    <!-- Панель для размещения таблицы ресурсов -->
-                    <div id="bottomPanel"
-                         data-dojo-attach-point="resourcesTablePane"
-                         data-dojo-type="dijit/layout/ContentPane"
-                         data-dojo-props="region: 'bottom', splitter: true, gutters: false"
-                         style="padding: 0; height: 100px; overflow: hidden">
-                        <div id="resourcesTable" style="height: 100%"></div>
-                    </div>
                 </div>
 
                 <!-- Левая панель -->
@@ -285,6 +276,19 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <!-- Bottom panel -->
+                <div data-dojo-type="dijit/layout/ContentPane" data-dojo-props="region:'bottom'">
+                    <!-- Resources table -->
+                    <div id="bottomPanel"
+                         data-dojo-attach-point="resourcesTablePane"
+                         data-dojo-type="dijit/layout/ContentPane"
+                         data-dojo-props="region: 'bottom', splitter: true, gutters: false"
+                         style="padding: 0; height: 100px; overflow: hidden">
+                        <div id="resourcesTable" style="height: 100%"></div>
+                    </div>
+
                 </div>
             </div>
 
