--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -278,10 +278,9 @@
                     </div>
                 </div>
 
-                <div data-resource-type-filter=""
-                     data-dojo-type="dijit/layout/BorderContainer"
+                <div data-dojo-type="dijit/layout/BorderContainer"
                      data-dojo-props="region: 'bottom', splitter: true, gutters: false"
-                     style="width: 100%; height: 150px; padding: 0;">
+                     style="width: 100%; height: 150px; padding: 5px;">
                     <div data-dojo-attach-point="resourcesTablePane"
                          data-dojo-type="dijit/layout/ContentPane"
                          data-dojo-props="region: 'left', splitter: true, gutters: false"
