#498 new layout by #495 was applied to show/hide bottom panel action

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -15,6 +15,7 @@
              style="width: 100%; height: 100%; padding: 0">
 
             <div id="mainContainer"
+                 data-dojo-attach-point="mainContainer"
                  data-dojo-type="dijit/layout/BorderContainer"
                  data-dojo-props="gutters: false"
                  style="width: 100%; height: 100%;">
@@ -279,6 +280,7 @@
                 </div>
 
                 <div data-dojo-type="dijit/layout/BorderContainer"
+                     data-dojo-attach-point="bottomPanel"
                      data-dojo-props="region: 'bottom', splitter: true, gutters: false"
                      style="width: 100%; height: 150px; padding: 5px;">
                     <div data-dojo-attach-point="resourcesTablePane"
