#495 UI components were moved to ui directory

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/AcceptedPartsPanel.css
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/AcceptedPartsPanel.css
@@ -2,3 +2,7 @@ div.accepted-parts-toolbar span.icon {
     color: #2074C3;
     font-size: 15px;
 }
+
+span.dijitToggleButtonDisabled {
+    opacity: 0.3;
+}
