#508 file icon was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello-codes.css
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello-codes.css
@@ -2,3 +2,4 @@
 .icon-plus:before { content: '\2b'; } /* '+' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
