--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello.css
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?11624402');
-  src: url('../font/fontello.eot?11624402#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?11624402') format('woff2'),
-       url('../font/fontello.woff?11624402') format('woff'),
-       url('../font/fontello.ttf?11624402') format('truetype'),
-       url('../font/fontello.svg?11624402#fontello') format('svg');
+  src: url('../font/fontello.eot?62940681');
+  src: url('../font/fontello.eot?62940681#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?62940681') format('woff2'),
+       url('../font/fontello.woff?62940681') format('woff'),
+       url('../font/fontello.ttf?62940681') format('truetype'),
+       url('../font/fontello.svg?62940681#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?11624402#fontello') format('svg');
+    src: url('../font/fontello.svg?62940681#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,7 @@
 }
  
 .icon-plus:before { content: '\2b'; } /* '+' */
+.icon-cancel-circled2:before { content: '\e04d'; } /* '' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
 .icon-doc-text:before { content: '\f0f6'; } /* '' */
