#511 button for random photo displaying was added

--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.css
@@ -57,6 +57,7 @@ div#timeline div.vis-current-time {
     background-color: green;
 }
 
-div.timeline i.sound {
+div.timeline i.sound,
+div.timeline i.photo {
     margin-left: 15px;
 }
