--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -6,6 +6,7 @@
         <i class="fa fa-stop-circle fa-2x" aria-hidden="true"></i>
         <i class="fa fa-fast-forward fa-2x" aria-hidden="true"></i>
         <i class="fa fa-volume-up fa-2x sound" aria-hidden="true"></i>
+        <i class="fa fa-eye fa-2x photo" aria-hidden="true"></i>
     </div>
     <br/>
     <div class="controls">
