#520 undoFirstPoint button was added

--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/AcceptedPartsPanel.css
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/AcceptedPartsPanel.css
@@ -3,6 +3,7 @@ div.accepted-parts-toolbar span.icon {
     font-size: 15px;
 }
 
-span.dijitToggleButtonDisabled {
+span.dijitToggleButtonDisabled,
+span.dijitButtonDisabled {
     opacity: 0.3;
 }
