--- a/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello-codes.css
+++ b/nextgisweb_compulink/compulink_accepted_part/amd/ngw-compulink-accepted-part/ui/AcceptedPartsPanel/css/fontello/css/fontello-codes.css
@@ -1,5 +1,6 @@
 
 .icon-plus:before { content: '\2b'; } /* '+' */
+.icon-undo:before { content: '\21b6'; } /* '↶' */
 .icon-cancel-circled2:before { content: '\e04d'; } /* '' */
 .icon-eye:before { content: '\e09d'; } /* '' */
 .icon-eye-off:before { content: '\e102'; } /* '' */
