--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -5,7 +5,7 @@
         <i class="fa fa-play-circle fa-2x" aria-hidden="true"></i>
         <i class="fa fa-stop-circle fa-2x" aria-hidden="true"></i>
         <i class="fa fa-fast-forward fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-volume-up fa-2x sound" aria-hidden="true"></i>
+        <i class="icon icon-volume-down sound" aria-hidden="true"></i>
         <i class="fa fa-eye fa-2x photo" aria-hidden="true"></i>
     </div>
     <br/>
