#493 title was added to resources tree panel

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -191,7 +191,11 @@
                              data-dojo-type="dijit/layout/ContentPane"
                              data-dojo-props="region: 'center'"
                              style="padding: 0">
-                            <div id="resourcesTree"></div>
+                            <div class="title">Объекты строительства</div>
+                            <div class="tree-overlay"></div>
+                            <div class="tree-wrapper">
+                                <div id="resourcesTree"></div>
+                            </div>
                         </div>
 
                     </div>
