#494 resource types filter was removed

--- a/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
+++ b/nextgisweb_compulink/compulink_site/amd/ngw-compulink-site/templates/Display.html
@@ -172,11 +172,12 @@
 
                     <div data-dojo-type="dijit/layout/BorderContainer"
                          data-dojo-props="region: 'center'"
-                         style="padding-bottom: 0; padding-right: 0">
+                         style="padding-bottom: 0; padding-right: 0; padding-top: 0;">
 
                         <!-- Тулбар над деревом слоев -->
                         <div data-dojo-type="dijit/Toolbar"
-                             data-dojo-props="region: 'top'">
+                             data-dojo-props="region: 'top'"
+                             style="display: none;">
 
                             <select data-dojo-type="dijit/form/Select" id="resourcesTypeSelector">
                                 <option value="all" selected="selected">ВОЛС и Ситуационные планы</option>
