--- a/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
+++ b/nextgisweb_compulink/compulink_editor/amd/ngw-compulink-editor/player/templates/Timeline.mustache
@@ -1,12 +1,12 @@
 <div class="timeline">
     <div id="timelineWidget"></div>
     <div class="controls">
-        <i class="fa fa-fast-backward fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-play-circle fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-stop-circle fa-2x" aria-hidden="true"></i>
-        <i class="fa fa-fast-forward fa-2x" aria-hidden="true"></i>
-        <i class="icon icon-volume-down sound" aria-hidden="true"></i>
-        <i class="fa fa-eye fa-2x photo" aria-hidden="true"></i>
+        <i class="fa fa-fast-backward fa-2x" aria-hidden="true" title="В начало"></i>
+        <i class="fa fa-play-circle fa-2x" aria-hidden="true" title="Проиграть"></i>
+        <i class="fa fa-stop-circle fa-2x" aria-hidden="true" title="Остановить"></i>
+        <i class="fa fa-fast-forward fa-2x" aria-hidden="true" title="В конец"></i>
+        <i class="icon icon-volume-down sound" aria-hidden="true" title="Звук"></i>
+        <i class="fa fa-eye fa-2x photo" aria-hidden="true" title="Фото"></i>
     </div>
     <br/>
     <div class="controls">
